--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
+    "build:es": "rm -rf ./build/es && esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=build/es/index.js && cp -a public/. build/es/public",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "test": "playwright test"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "aws-lambda": "^1.0.7",
     "cors": "^2.8.5",
-    "youtube-caption-extractor": "^1.8.2"
+    "express": "^4.21.2",
+    "youtube-caption-extractor": "^1.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/node": "^20.5.0",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1",
-    "@playwright/test": "^1.37.1"
+    "@playwright/test": "^1.55.0",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/node": "^20.19.11",
+    "esbuild": "^0.25.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
